# ide

./: .gitignore  .lgvim  Cargo.toml  README.md  g.txt  uncertain.c  x..txt  x.txt
src/: assemblers.rs  coop.rs  ide.rs  keybinds.rs  keyboard.rs  main.rs  structs.rs  ui.rs  utils.rs
src/assemblers/: file_editor.rs  files.rs
src/coop/: routes.rs  utils.rs
src/keybinds/: editor.rs  files.rs  kb_file_editor.rs  kb_files.rs  properties.rs
src/keybinds/modules/: properties.rs
src/ui/: editor.rs  files.rs  highlight.rs  properties.rs
src/ui/highlight/: c.rs  markdown.rs  pearl.rs  rust.rs  toml.rs
src/utils/: explorer.rs  fs.rs  terminal.rs
