[package]
name = "beditor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
crossterm = "0.25.0"
async-std = "1.10.0"
futures = "*"
tokio = { version = "1", features = ["full"] }
actix-web = "4.0"
reqwest = "0.11"